Twilio Sms service

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,11 @@
         "NameFrom": "ChatRoom Ltda.",
         "EmailFrom": "snacks.ltda.1@gmail.com"
     },
+    "TwilioConfiguration": {
+        "SMSAccountIdentification": "AC10fd58ea4a93174582ddd586103d4002",
+        "SMSAccountToken": "cce5e9a7e6e7a63eac59264700712193",
+        "SMSAccountFrom": "+13364153563"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
